--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">DoSoptTemplate</string>
+    <string name="application_terminate">\'뒤로\' 버튼 한 번 더 누르면 종료됩니다.</string>
 
     <!-- 로그인 페이지 -->
     <string name="login_title">Welcome to SOPT</string>
@@ -32,6 +33,5 @@
     <string name="mainpage_mbti">MBTI</string>
     <string name="mainpage_description">아 졸려어어어어어어ㅓ어어어어어어ㅓ어엉어ㅓㅇ엉</string>
     <string name="mainpage_logout"><u>로그아웃</u></string>
-
 
 </resources>
