--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="mainpage_description">아 졸려어어어어어어ㅓ어어어어어어ㅓ어엉어ㅓㅇ엉</string>
     <string name="mainpage_logout"><u>로그아웃</u></string>
 
+    <!-- 홈 화면 -->
+    <string name="home_gift">선물하기</string>
+    <string name="home_add_state_message">상태 메세지 +</string>
+
 </resources>
