--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,16 @@
     <!-- 홈 화면 -->
     <string name="home_gift">선물하기</string>
     <string name="home_add_state_message">상태 메세지 +</string>
+    <string name="home_add_name">이름</string>
+    <string name="home_add_music">음악</string>
+    <string name="home_add_name_hint">이름을 입력해주세요</string>
+    <string name="home_add_music_hint">음악을 입력해주세요</string>
+    <string name="home_add_birthday">생일</string>
+    <string name="home_add_ok">확인</string>
+
+    <!-- 다이얼로그 -->
+    <string name="dialog_cancel_text">취소</string>
+    <string name="dialog_apply_text">확인</string>
+    <string name="dialog_home_user_delete_title">정말로 삭제하시겠습니까?</string>
 
 </resources>
