--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="dialog_cancel_text">취소</string>
     <string name="dialog_apply_text">확인</string>
     <string name="dialog_home_user_delete_title">정말로 삭제하시겠습니까?</string>
+    <string name="dialog_date_format">%04d%02d%02d</string>
 
 </resources>
