--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string name="dialog_apply_text">확인</string>
     <string name="dialog_home_user_delete_title">정말로 삭제하시겠습니까?</string>
     <string name="dialog_date_format">%04d%02d%02d</string>
+    <string name="signup_fail_message">회원가입에 실패하였습니다.</string>
 
 </resources>
