--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,7 @@
     <string name="bnv_mypage">마이페이지</string>
     <string name="bnv_follower">팔로워</string>
 
+    <!-- 팔로워 페이지 -->
+    <string name="follower_fail_text">팔로워 리스트 불러오기 실패</string>
+
 </resources>
